--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -10,6 +10,26 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="he_arc.marble_mazze.MenuActivity">
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonStart3"
+        android:elevation="0dp"
+        tools:text="Start"
+        android:layout_alignTop="@+id/textNomNiveau3"
+        android:layout_alignEnd="@+id/textMenu" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textScoreNiveau3"
+        tools:text="Score : 0"
+        android:textSize="18sp"
+        android:layout_below="@+id/textNomNiveau3"
+        android:layout_alignStart="@+id/textNomNiveau3"
+        android:layout_marginTop="10dp" />
+
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
@@ -21,16 +41,15 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:text="TextView"
+    <Button
+        android:text="Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textNomNiveau1"
-        tools:text="Niveau : 1"
-        android:textSize="22sp"
-        android:layout_marginTop="36dp"
-        android:layout_below="@+id/textMenu"
-        android:layout_alignStart="@+id/textMenu" />
+        android:id="@+id/buttonStart1"
+        android:elevation="0dp"
+        tools:text="Start"
+        android:layout_alignTop="@+id/textNomNiveau1"
+        android:layout_alignStart="@+id/buttonStart2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,17 +59,60 @@
         android:textSize="18sp"
         android:layout_below="@+id/textNomNiveau1"
         android:layout_alignStart="@+id/textNomNiveau1"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="11dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textScoreNiveau2"
+        tools:text="Score : 0"
+        android:textSize="18sp"
+        android:layout_below="@+id/textNomNiveau2"
+        android:layout_alignStart="@+id/textNomNiveau2"
+        android:layout_marginTop="11dp" />
 
     <Button
         android:text="Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/buttonStart1"
+        android:id="@+id/buttonStart2"
         android:elevation="0dp"
         tools:text="Start"
-        android:layout_alignTop="@+id/textNomNiveau1"
-        android:layout_alignEnd="@+id/textMenu" />
+        android:layout_alignTop="@+id/textNomNiveau2"
+        android:layout_alignStart="@+id/buttonStart3" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textNomNiveau1"
+        tools:text="Niveau : 1"
+        android:textSize="22sp"
+        android:layout_marginTop="35dp"
+        android:layout_below="@+id/textMenu"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textNomNiveau2"
+        tools:text="Niveau : 2"
+        android:textSize="22sp"
+        android:layout_below="@+id/textScoreNiveau1"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="24dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textNomNiveau3"
+        tools:text="Niveau : 3"
+        android:textSize="22sp"
+        android:layout_marginTop="26dp"
+        android:layout_below="@+id/textScoreNiveau2"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
